--- a/StoreAndDeliverUI/src/assets/i18n/ua.json
+++ b/StoreAndDeliverUI/src/assets/i18n/ua.json
@@ -9,8 +9,44 @@
         "card3Header": "Складські приміщення... Багато складських приміщень",
         "card3Body": "Окрім транспортування вантажів, наш сервіс також забезпечує їх зберігання. Як і при транспортуванні, ви самі вказуєте всі необхідні параметри навколишнього середовища."
     },
+    "registration": {
+        "registration": "Регістрація",
+        "nameAlreadyTaken": "Таке ім'я користувача вже існує",
+        "passwordsNotEqual": "Пароль і пароль для підтвердження мають бути однаковими.",
+        "weakPassword": "Паролm повинен містити 6 символів і принаймні один спеціальний символ(_-$), один нижній регістр ('a'-'z'), один великий регістр ('A'-'Z').",
+        "register": "Зареєструватися"
+    },
+    "login": {
+        "usernameOrPasswordInvalid": "Ім’я користувача або пароль недійсні",
+        "emailConfirmationRequired": "Потрібно підтвердження електронної пошти"
+    },
+    "validation": {
+        "userNameRequired": "Ім’я користувача обов’язкове",
+        "emailRequired": "Електронна адреса обов’язкова",
+        "invalidEmail": "Електронна адреса невірна",
+        "passwordRequired": "Пароль обов'язковий",
+        "confirmPasswordRequired": "Підтвердження паролю обов'язкове"
+    },
+    "emailConfirmation": {
+        "emailConfirmation": "Підтвердження електронною поштою",
+        "success": "Вашу електронну пошту було успішно підтверджено.",
+        "clickToLogin": "Натисніть тут, щоб увійти"
+    },
+    "navbar": {
+        "dashboard": "Панель"
+    },
+    "toastrs": {
+        "registration": "Ви успішно зареєстровані. Лист -підтвердження надіслано на адресу "
+    },
     "common": {
         "signin": "Увійти",
-        "signup": "Регістрація"
+        "login": "Вхід",
+        "logout": "Вийти",
+        "signup": "Регістрація",
+        "userName": "Ім'я користувача",
+        "email": "Електронна пошта",
+        "password": "Пароль",
+        "confirmPassword": "Підтвердити пароль",
+        "close": "Закрити"
     }
 }
