Add sidenav menu, refactor routing, add cargo-request component

--- a/StoreAndDeliverUI/src/assets/i18n/en.json
+++ b/StoreAndDeliverUI/src/assets/i18n/en.json
@@ -33,7 +33,9 @@
         "clickToLogin": "Click here to log in"
     },
     "navbar": {
-        "dashboard": "Dashboard"
+        "dashboard": "Dashboard",
+        "createRequest": "Cargo delivery",
+        "aboutUs": "About Us"
     },
     "toastrs": {
         "registration": "You are registered successfully. Confirmation email was send to "
