--- a/StoreAndDeliverUI/src/assets/i18n/ua.json
+++ b/StoreAndDeliverUI/src/assets/i18n/ua.json
@@ -33,10 +33,12 @@
         "clickToLogin": "Натисніть тут, щоб увійти"
     },
     "navbar": {
-        "dashboard": "Панель"
+        "dashboard": "Панель",
+        "createRequest": "Перевезти вантаж",
+        "aboutUs": "Про нас"
     },
     "toastrs": {
-        "registration": "Ви успішно зареєстровані. Лист -підтвердження надіслано на адресу "
+        "registration": "Ви успішно зареєстровані. Лист-підтвердження надіслано на адресу "
     },
     "common": {
         "signin": "Увійти",
