--- a/StoreAndDeliverUI/src/assets/i18n/ua.json
+++ b/StoreAndDeliverUI/src/assets/i18n/ua.json
@@ -55,11 +55,18 @@
         "fromAddress": "Перевезти з",
         "toAddress": "Адреса доставки",
         "requiredDates": "Необхідні дати",
-        "deliverCargoBy": "Доставити груз до",
-        "storeFromDate": "Зберігати груз з",
-        "storeByDate": "Зберігати груз по",
+        "deliverCargoBy": "Доставити вантаж до",
+        "storeFromDate": "Зберігати вантаж з",
+        "storeByDate": "Зберігати вантаж по",
         "securityMode": "Режим додаткової охорони",
-        "securityModeToolTip": "Виберіть, якщо хочете додати режим додаткової охорони під час зберігання вантажу"
+        "securityModeToolTip": "Виберіть, якщо хочете додати режим додаткової охорони під час зберігання вантажу",
+        "addCargo": "Додати вантаж",
+        "weight": "Вага",
+        "amount": "Кількість",
+        "length": "Довжина",
+        "height": "Висота",
+        "description": "Опис",
+        "width": "Ширина"
     },
     "common": {
         "signin": "Увійти",
@@ -70,6 +77,8 @@
         "email": "Електронна пошта",
         "password": "Пароль",
         "confirmPassword": "Підтвердити пароль",
-        "close": "Закрити"
+        "close": "Закрити",
+        "cargo": "Вантаж",
+        "delete": "Видалити"
     }
 }
