Add indicator settings form

--- a/StoreAndDeliverUI/src/assets/i18n/en.json
+++ b/StoreAndDeliverUI/src/assets/i18n/en.json
@@ -47,6 +47,7 @@
         "requestType": "Request Type",
         "requestDetails": "Request Details",
         "cargoDetails": "Cargo Details",
+        "indicatorsSettings": "Indicators Settings",
         "cargoTransportation": "Cargo Transportation",
         "cargoStorage": "Cargo Storage",
         "country": "Country",
