--- a/StoreAndDeliverUI/src/assets/i18n/ua.json
+++ b/StoreAndDeliverUI/src/assets/i18n/ua.json
@@ -47,6 +47,7 @@
         "requestType": "Тип звяви",
         "requestDetails": "Деталі заяви",
         "cargoDetails": "Деталі вантажу",
+        "indicatorsSettings": "Налаштування показників",
         "cargoTransportation": "Перевезення вантажу",
         "cargoStorage": "Зберігання вантажу",
         "country": "Країна",
