--- a/StoreAndDeliverUI/src/assets/i18n/ua.json
+++ b/StoreAndDeliverUI/src/assets/i18n/ua.json
@@ -67,7 +67,8 @@
         "length": "Довжина",
         "height": "Висота",
         "description": "Опис",
-        "width": "Ширина"
+        "width": "Ширина",
+        "addSetting": "Додати налаштування"
     },
     "common": {
         "signin": "Увійти",
@@ -80,6 +81,11 @@
         "confirmPassword": "Підтвердити пароль",
         "close": "Закрити",
         "cargo": "Вантаж",
-        "delete": "Видалити"
+        "delete": "Видалити",
+        "next": "Далі", 
+        "back": "Назад",
+        "setting": "Налаштування",
+        "minValue": "Мінімальне значення",
+        "maxValue": "Максимальне значення"
     }
 }
