Add logic to switching tabs buttons

--- a/StoreAndDeliverUI/src/assets/i18n/ua.json
+++ b/StoreAndDeliverUI/src/assets/i18n/ua.json
@@ -86,6 +86,7 @@
         "back": "Назад",
         "setting": "Налаштування",
         "minValue": "Мінімальне значення",
-        "maxValue": "Максимальне значення"
+        "maxValue": "Максимальне значення",
+        "submit": "Відправити"
     }
 }
