--- a/StoreAndDeliverUI/src/assets/i18n/en.json
+++ b/StoreAndDeliverUI/src/assets/i18n/en.json
@@ -86,6 +86,7 @@
         "back": "Back",
         "setting": "Setting",
         "minValue": "Min Value",
-        "maxValue": "Max Value"
+        "maxValue": "Max Value",
+        "submit": "Submit"
     }
 }
