Add support of different measurement units for cargo form (length and weight units, without storing in local storage)

--- a/StoreAndDeliverUI/src/assets/i18n/en.json
+++ b/StoreAndDeliverUI/src/assets/i18n/en.json
@@ -87,6 +87,8 @@
         "setting": "Setting",
         "minValue": "Min Value",
         "maxValue": "Max Value",
-        "submit": "Submit"
+        "submit": "Submit",
+        "weightUnit": "Weight Unit",
+        "lengthUnit": "Length Unit"
     }
 }
