--- a/StoreAndDeliverUI/src/assets/i18n/ua.json
+++ b/StoreAndDeliverUI/src/assets/i18n/ua.json
@@ -87,6 +87,8 @@
         "setting": "Налаштування",
         "minValue": "Мінімальне значення",
         "maxValue": "Максимальне значення",
-        "submit": "Відправити"
+        "submit": "Відправити",
+        "weightUnit": "Одиниця виміру ваги",
+        "lengthUnit": "Одиниця виміру дліни"
     }
 }
