--- a/StoreAndDeliverUI/src/assets/i18n/ua.json
+++ b/StoreAndDeliverUI/src/assets/i18n/ua.json
@@ -89,6 +89,9 @@
         "maxValue": "Максимальне значення",
         "submit": "Відправити",
         "weightUnit": "Одиниця виміру ваги",
-        "lengthUnit": "Одиниця виміру дліни"
+        "lengthUnit": "Одиниця виміру дліни",
+        "temperatureUnit": "Одиниця виміру температури",
+        "humidityUnit": "Одиниця виміру вологості",
+        "luminosityUnit": "Одиниця виміру освітлення"
     }
 }
