Implement stripe payments

--- a/StoreAndDeliverUI/src/assets/i18n/en.json
+++ b/StoreAndDeliverUI/src/assets/i18n/en.json
@@ -70,6 +70,10 @@
         "width": "Width",
         "addSetting": "Add Setting"
     },
+    "payment": {
+        "header": "Payment",
+        "pay": "Pay"
+    },
     "common": {
         "signin": "Sign In",
         "login": "Log In",
