--- a/StoreAndDeliverUI/src/assets/i18n/ua.json
+++ b/StoreAndDeliverUI/src/assets/i18n/ua.json
@@ -70,6 +70,10 @@
         "width": "Ширина",
         "addSetting": "Додати налаштування"
     },
+    "payment": {
+        "header": "Оплата",
+        "pay": "Оплатити"
+    },
     "common": {
         "signin": "Увійти",
         "login": "Вхід",
