Implement adding deliver cargo request

--- a/StoreAndDeliverUI/src/assets/i18n/en.json
+++ b/StoreAndDeliverUI/src/assets/i18n/en.json
@@ -68,7 +68,8 @@
         "height": "Height",
         "description": "Description",
         "width": "Width",
-        "addSetting": "Add Setting"
+        "addSetting": "Add Setting",
+        "successRequestAdding": "Request has been successfully send!"
     },
     "payment": {
         "header": "Payment",
