--- a/StoreAndDeliverUI/src/assets/i18n/en.json
+++ b/StoreAndDeliverUI/src/assets/i18n/en.json
@@ -70,13 +70,17 @@
         "width": "Width",
         "addSetting": "Add Setting",
         "successRequestAdding": "Request has been successfully send!",
-        "reviewOptimizedRequests": "Review requests"
+        "reviewOptimizedRequests": "Review requests",
+        "activeRequests": "Current active requests",
+        "requestDate": "Request from",
+        "totalPrice": "Total price"
     },
     "statuses":{
         "inProgress": "In Progress",
         "rejected": "Rejected",
         "completed": "Completed",
-        "pending": "Pending"
+        "pending": "Pending",
+        "status": "Status"
     },
     "payment": {
         "header": "Payment",
@@ -93,6 +97,7 @@
         "confirmPassword": "Confirm Password",
         "close": "Close",
         "cargo": "Cargo",
+        "cargoSet": "Cargo",
         "delete": "Delete",
         "next": "Next", 
         "back": "Back",
@@ -104,6 +109,8 @@
         "lengthUnit": "Length Unit",
         "temperatureUnit": "Temperature Unit",
         "humidityUnit": "Humidity Unit",
-        "luminosityUnit": "Luminosity Unit"
+        "luminosityUnit": "Luminosity Unit",
+        "open": "Open",
+        "clickTo": "Click to"
     }
 }
