--- a/StoreAndDeliverUI/src/assets/i18n/ua.json
+++ b/StoreAndDeliverUI/src/assets/i18n/ua.json
@@ -41,6 +41,10 @@
     "toastrs": {
         "registration": "Ви успішно зареєстровані. Лист-підтвердження надіслано на адресу "
     },
+    "dialogs": {
+        "cargoFullTitle": "Заповнена вантажівка",
+        "cargoFullContent": "Вантажівка заповнена. Завершіть поточні замовлення."
+    },
     "cargoRequest":{
         "header": "Створити заяву на перевезення або збереження вантажу",
         "reviewRequests": "Переглянути мої заяви",
@@ -77,7 +81,8 @@
         "storeAddress": "Адреса складського приміщення",
         "selectRequestType": "Обирите тип заяви",
         "selectRequestStatus": "Обирите статус заяви",
-        "emptyRequests": "Заяв з таким статусом не знайдено"
+        "emptyRequests": "Заяв з таким статусом не знайдено",
+        "noAvailableRequests": "Доступні заіви відсутні"
     },
     "payment": {
         "header": "Оплата",
