Add current user requests page

--- a/StoreAndDeliverUI/src/assets/i18n/en.json
+++ b/StoreAndDeliverUI/src/assets/i18n/en.json
@@ -82,7 +82,8 @@
         "selectRequestType": "Select request type",
         "selectRequestStatus": "Select request status",
         "emptyRequests": "There is no requests with such status",
-        "noAvailableRequests": "There is no available requests"
+        "noAvailableRequests": "There is no available requests",
+        "myRequests": "My Requests"
     },
     "statuses":{
         "inProgress": "In Progress",
