--- a/StoreAndDeliverUI/src/assets/i18n/ua.json
+++ b/StoreAndDeliverUI/src/assets/i18n/ua.json
@@ -13,7 +13,7 @@
         "registration": "Регістрація",
         "nameAlreadyTaken": "Таке ім'я користувача вже існує",
         "passwordsNotEqual": "Пароль і пароль для підтвердження мають бути однаковими.",
-        "weakPassword": "Паролm повинен містити 6 символів і принаймні один спеціальний символ(_-$), один нижній регістр ('a'-'z'), один великий регістр ('A'-'Z').",
+        "weakPassword": "Пароль повинен містити 6 символів і принаймні один спеціальний символ(_-$), один нижній регістр ('a'-'z'), один великий регістр ('A'-'Z').",
         "register": "Зареєструватися"
     },
     "login": {
@@ -39,7 +39,9 @@
         "aboutUs": "Про нас"
     },
     "toastrs": {
-        "registration": "Ви успішно зареєстровані. Лист-підтвердження надіслано на адресу "
+        "registration": "Ви успішно зареєстровані. Лист-підтвердження надіслано на адресу ",
+        "carrierAdded": "Перевізника було успішно додано!",
+        "carrierUpdated": "Перевізника було успішно оновлено!"
     },
     "dialogs": {
         "cargoFullTitle": "Заповнена вантажівка",
@@ -85,6 +87,16 @@
         "noAvailableRequests": "Доступні заіви відсутні",
         "myRequests": "Мої Заяви"
     },
+    "adminFeatures": {
+        "header": "Управлянні перевізниками",
+        "addNewCarrier": "Додати нового перевізника",
+        "companyName": "Назва компанії",
+        "truckVolume": "Об'єм вантажівки (м^3)",
+        "addingNewCarrier":"Додавання перевізника",
+        "updatingCarrier": "Оновлення інформації про перевізника",
+        "addCarrier": "Додати перевізника",
+        "updateCarrier": "Оновити перевізника"
+    },
     "payment": {
         "header": "Оплата",
         "pay": "Оплатити"
@@ -93,12 +105,15 @@
         "store": "Зберігання",
         "deliver": "Доставка"
     },
-    "statuses":{
+    "statuses": {
         "inProgress": "Оброблюється",
         "rejected": "Відхилено",
         "completed": "Виповнено",
         "pending": "На розгляді",
         "status": "Статус"
+    },
+    "sidenav": {
+        "carrierManagement": "Управління перевізниками"
     },
     "common": {
         "signin": "Увійти",
@@ -113,6 +128,7 @@
         "cargo": "Вантаж",
         "cargoSet": "Вантажі",
         "delete": "Видалити",
+        "update": "Оновити",
         "next": "Далі", 
         "back": "Назад",
         "setting": "Налаштування",
